<resources>
    <string name="developer">개발자</string>
    <string name="project">프로젝트</string>
    <string name="apply">신청하기</string>
    <string name="searchbar_hint">궁금한 프로젝트를 검색해주세요</string>
    <string name="top_app_bar_projects">프로젝트 찾기</string>
    <string name="tv_sort_recent">최신순</string>
    <string name="tv_sort_high_check">조회수 높은순</string>
    <string name="tv_sort_low_check">조회수 낮은순</string>
    <string name="top_app_bar_developer">개발자 찾기</string>
    <string name="dev_detail_top_bar">개발자 상세 페이지</string>
    <string name="project_detail_top_bar">프로젝트 상세 페이지</string>
    <string name="project_submit_top_bar">프로젝트 등록하기</string>
    <string name="github">Github</string>
    <string name="github_link">프로젝트 Github 주소</string>
    <string name="kakao_id">카카오톡 아이디</string>
    <string name="email">이메일</string>
    <string name="tv_navigate_to_project"><u>프로젝트 보러가기&#8599;</u></string>
    <string name="tv_dev_info_title">개발자 정보</string>
    <string name="tv_project_intro">프로젝트 소개</string>
    <string name="tv_project_intro_submit_title">프로젝트 소개를 입력해주세요</string>
    <string name="tv_project_intro_title">프로젝트 소개</string>
    <string name="tv_project_link_title">관련 링크</string>
    <string name="tv_project_submit_web_link_hint">사용가능한 웹 링크를 입력해주세요</string>
    <string name="et_project_app_link_hint">앱을 다운받을 수 있는 곳의 링크를 입력해주세요</string>
    <string name="et_project_info_link_hint">프로젝트 소개 페이지 링크를 입력해주세요</string>
    <string name="tv_project_submit_web_link_title">웹 링크</string>
    <string name="tv_project_submit_app_link_title">앱 다운로드 링크</string>
    <string name="tv_project_submit_info_link_title">소개 페이지 링크</string>
    <string name="tv_project_submit_developer_title">함께한 개발자를 정보를 입력해주세요!</string>
    <string name="tv_introduce_dev_title">개발자 정보</string>
    <string name="tv_introduce">화면 터치 시 슈플렉터를 시작할 수 있어요!</string>
    <string name="top_app_bar_mypage">내 정보</string>
    <string name="tv_apply_title">신청하러 가기</string>
    <string name="tv_apply_content_project">카카오톡 오픈 채팅을 통해 프로젝트 업로드 신청을 해보세요!\n슈플렉터에 우리 팀 프로젝트를 공유하고 다양한 숭실대 학우들과 소통할 수 있어요</string>
    <string name="btn_apply_project">내 프로젝트 신청하러 가기</string>
    <string name="tv_apply_content_developer">카카오톡 오픈 채팅을 통해 개발자 프로필을 등록해보세요!\n슈플렉터에 내 포트폴리오를 공유하고 숭실대 학우들에게 나를 어필할 수 있어요</string>
    <string name="btn_apply_developer">개발자 포트폴리오 신청하러 가기</string>
    <string name="tv_terms_of_use">이용약관</string>
    <string name="tv_privacy_policy">개인정보 처리방침</string>
    <string name="tv_complaint">신고하기</string>
    <string name="service_use_docs_uri">https://www.notion.so/c2d326eb516f48a48633bffa5df05936?pvs=4</string>
    <string name="privacy_docs_uri">https://www.notion.so/c223b37f5ba44f05b162bf9c3f463ea5?pvs=4</string>
    <string name="tv_complaint_link">https://open.kakao.com/o/gnLnw8pg</string>
    <string name="developer_form">https://forms.gle/UsAn9zX74vrJYxG37</string>
    <string name="project_form">https://forms.gle/3rsgKP3UFLPySJBFA</string>
    <string name="github_default_link">https://github.com/</string>
    <string name="fail_kakao_login">카카오 로그인에 실패했습니다. 다시 시도해주세요.</string>
    <string name="kakao_login_success">카카오 로그인 성공</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="navigateToMyInfo">내 개발자 정보 보러가기</string>
    <string name="dev_submit_top_bar">내 개발자 프로필 등록하기</string>
    <string name="tv_dev_submit_hint">저는 안드로이드 개발에 관심이 있어요. 함께 하실 분 연락주세요</string>
    <string name="tv_github">깃허브 아이디를 입력해주세요.</string>
    <string name="tv_university_title">학교</string>
    <string name="tv_major_title">전공</string>
    <string name="et_university_hint">학교 이름을 입력해주세요.</string>
    <string name="et_major_hint">전공을 입력해주세요.</string>
    <string name="tv_student_number_title">학번</string>
    <string name="et_student_number">학번을 입력해주세요.(ex. 21)</string>
    <string name="tv_dev_submit_title">나에 대한 소개 문구를 작성해주세요!</string>
    <string name="tv_part_title">가장 자신있는 개발 분야 최대 2개를 입력해주세요!</string>
    <string name="tv_dev_name_title">이름</string>
    <string name="tv_dev_stack_title">가장 자신있는 기술 스택 최대 3개를 입력해주세요!</string>
    <string name="success_login">로그인에 성공하였습니다.</string>
    <string name="need_signup">회원가입이 필요합니다.</string>
    <string name="fail_login">로그인에 실패하였습니다.</string>
    <string name="success_logout">로그아웃 되었습니다.</string>
    <string name="fail_logout">로그아웃에 실패하였습니다.</string>
    <string name="success_withdrwal">탈퇴 되었습니다.</string>
    <string name="fail_withdrawal">회원탈퇴에 실패하였습니다.</string>
    <string name="kakao_id_hint">연락이 가능한 카카오 아이디를 입력해주세요</string>
    <string name="kakao_id_title">카카오톡 아이디</string>
    <string name="default_app_link">아직 출시되지 않았어요!</string>
    <string name="default_link">준비 중입니다 :)</string>
    <string name="ai_members_dest">AI 팀원</string>
    <string name="ai_members">AI 팀원</string>
    <string name="ai_members_description">이미지를 클릭하여 원하는 AI 팀원과 협업해요!</string>
    <string name="ai_pm">프로젝트 매니저 AI</string>
    <string name="ai_designer">디자이너 AI</string>
    <string name="ai_pm_summary_meeting_title">회의록 요약하기</string>
    <string name="ai_pm_summary_meeting_description">회의를 녹음하고, 녹음 파일을 첨부하면 프로젝트 매니저 AI가 텍스트로 오늘의 회의를 요약해줘요!</string>
    <string name="tv_file_upload">회의록 업로드</string>
    <string name="tv_file_download">이미지 다운받기</string>
    <string name="iv_meeting_result">요약 결과 확인하기</string>
    <string name="ai_pm_meeting_progress_title">회의 진행하기</string>
    <string name="ai_pm_meeting_progress_description">진행할 전체 회의 시간, 회의 참석 인원 수를 입력하면\nPM AI가 이를 고려하여 말하며 회의를 진행해줘요!\n회의에 꼭 필요한 주제도 선택해주세요!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ai_pm_summary_meeting_result_title">요약 결과 확인하기</string>
    <string name="fail_to_summary">회의록이 요약되지 않았습니다. 음성파일을 다시 업로드 해주세요.</string>
    <string name="ai_pm_title">프로젝트 매니저 AI</string>
    <string name="ai_pm_description">오늘의 PM을 담당하게된 AI입니다!\n오늘의 회의는 아래와 같이 진행 돼요.\n버튼을 클릭 시 제가 말하며 회의를 진행 해요.</string>
    <string name="tv_meeting_progress_title">오늘의 회의 목차</string>
    <string name="set_timer">00:00</string>
    <string name="ai_designer_make_branding_title">브랜딩 만들기</string>
    <string name="ai_designer_make_image_title">이미지 생성하기</string>
    <string name="ai_designer_branding_title">프로젝트 브랜딩 정하기</string>
    <string name="ai_designer_branding_description">프로젝트에 대한 설명을 작성하고, 원하는 브랜딩을 알려주면 디자이너 AI가 브랜딩을 제작해줘요!</string>
    <string name="ai_designer_image_description">프로젝트에 대한 설명을 작성하고, 원하는 이미지 종류(배경화면, 캐릭터, 아이콘 등)를 알려주면 디자이너 AI가 이미지을 제작해줘요!</string>
    <string name="ai_designer_branding_result_title">브랜딩 결과 확인하기</string>
    <string name="ai_designer_image_result_title">이미지 확인하기</string>
    <string name="et_branding_description_hint">브랜딩을 원하는 프로젝트에 대해 설명해주세요!</string>
    <string name="et_image_description_hint">원하는 이미지에 대해 설명해주세요!</string>
    <string name="btn_submit_branding">브랜딩 요청하기&#8599;</string>
    <string name="btn_submit_image">이미지 요청하기&#8599;</string>
    <string name="ai_designer_image_title">프로젝트 이미지 생성하기</string>
    <string name="loading">Loading...</string>
    <string name="fail_to_branding">브랜딩 생성에 실패했어요. 다시 시도해주세요.</string>
    <string name="tv_copy">복사하기</string>
    <string name="et_github_hint">프로젝트의 깃허브 링크를 입력해주세요</string>
    <string name="et_project_name_hint">등록할 프로젝트 이름을 입력해주세요.</string>
    <string name="tv_dev_stack_submit_title">기술 스택을 선택해주세요</string>
    <string name="tv_submit_project_category_title">프로젝트의 카테고리를 선택해주세요</string>
    <string name="language">언어</string>
    <string name="et_project_intro_content_long_hint">프로젝트에 대한 상세 설명을 작성해주세요. (500자 제한)</string>
    <string name="et_project_intro_content_short_hint">프로젝트 한줄 소개를 작성해주세요.</string>
    <string name="tv_project_submit_developer">개발자 정보 입력하기&#8599;</string>
    <string name="tv_dev_stack_language">사용 언어↗</string>
    <string name="tv_dev_stack_dev_stack">기술 스택↗</string>
    <string name="tv_dev_stack_cooperation">협업툴↗</string>
    <string name="tv_submit_project_category">카테고리↗</string>
    <string name="tv_project_submit_image"><u>이미지 업로드</u></string>
    <string name="submit_image">이미지를 선택해주세요.</string>
    <string name="all_withdrawal">탈퇴</string>
    <string name="all_cancel">취소</string>
    <string name="all_check">확인</string>
    <string name="logout_dialog_title">슈플렉터를 로그아웃 하시겠어요?</string>
    <string name="withdrawal_dialog_title">정말 슈플렉터를 탈퇴 하시겠어요?</string>
    <string name="withdrawal_dialog_description">회원탈퇴 후 유저 정보는 30일 동안 임시 보관되며, 이후 영구 삭제됩니다.</string>
    <string name="tv_find_dev_title">프로젝트를 함께한 개발자의 이름을 검색해서 찾아보세요!</string>
    <string name="tv_find_dev_description">슈플렉터에 등록되어 있는 개발자라면, 프로젝트를 함께 진행한 개발자로 등록할 수 있어요.</string>
    <string name="searchbar_hint_find_dev">개발자 이름을 검색해주세요</string>
    <string name="dialog_language_title">사용 언어</string>
    <string name="dialog_language_description">프로젝트에서 사용한 언어를 선택해주세요.\n(최대 3개)</string>
    <string name="dialog_techstack_title">사용 기술 스택</string>
    <string name="dialog_techstack_description">프로젝트에서 사용한 기술 스택을 선택해주세요.\n(최대 3개)</string>
    <string name="dialog_cooperation_title">사용 협업툴</string>
    <string name="dialog_cooperation_description">프로젝트에서 사용한 협업툴을 선택해주세요.\n(최대 3개)</string>
    <string name="submit_project_add_dev">함께한 개발자 추가하러 가기</string>
    <string name="all_next">다음</string>
    <string name="fail_submit_project">프로젝트 등록에 실패했습니다. 입력 값을 다시 확인해주세요.</string>
    <string name="success_sumbit_project">프로젝트가 등록되었습니다.</string>
    <string name="ai_matching_bot">개발자 매칭 봇</string>
    <string name="cb_project_experience">프로젝트 경험이 있는 팀원을 찾고 있어요</string>
    <string name="min">최소</string>
    <string name="max">최대</string>
    <string name="tv_student_id_title">원하는 학번의 범위를 선택해주세요.</string>
    <string name="student_id">학번</string>
    <string name="et_matching_description">원하는 개발자에 대해서 자유롭게 알려주세요!\n의견을 반영하여 가장 적합한 개발자를 추천해드릴게요.</string>
    <string name="btn_matching_result_next">매칭 결과 확인하기</string>
    <string name="tv_matching_dev_stack_title">찾고자 하는 개발자의 스택을 선택해주세요.</string>
    <string name="ai_matching_title">개발자 추천</string>
    <string name="ai_matching_description">원하는 개발자의 조건을 선택 및 입력을 하면, 개발자 매칭 봇이 가장 적합한 개발자를 추천해드려요.</string>
    <string name="dev_part">개발 파트&#8599;</string>
    <string name="dev_language">주 언어&#8599;</string>
    <string name="dev_tech_stack">기술 스택&#8599;</string>
    <string name="tvDevPart_dialog_title">개발 파트</string>
    <string name="tvDevPart_dialog_description">원하는 개발자의 개발 파트를 선택해주세요.\n(최대 1개)</string>
    <string name="dev_language_dialog_title">주 언어</string>
    <string name="dev_language_dialog_description">어떤 언어를 주력으로 하는 개발자가 필요한지 알려주세요.\n(최대 3개)</string>
    <string name="dev_tech_dialog_title">기술 스택</string>
    <string name="dev_tech_dialog_description">개발자에게 필요한 기술 스택을 선택해주세요.\n(최대 3개)</string>
    <string name="setStudentIdRange">유효한 범위의 값을 선택해주세요.</string>
    <string name="fail_to_matching">개발자 매칭 추천에 실패하였습니다.</string>
    <string name="ai_matching_result_title">개발자 매칭 추천 결과</string>
    <string name="ai_matching_result_description">입력해주신 조건을 기반으로 추천된 개발자 리스트입니다.\n각 개발자를 클릭하여 개발자 상세보기로 상세 정보를 확인할 수 있어요</string>
    <string name="tv_ai_pm_description">프로젝트 매니저(PM) AI 팀원은 회의록 요약과 회의 진행을 할 수 있어요.</string>
    <string name="tv_ai_designer_description">디자이너 AI 팀원은 프로젝트의 브랜딩과 필요한 이미지 및 캐릭터들을 만들 수 있어요.</string>
    <string name="tv_ai_matching_description">개발자 매칭 봇은 원하는 조건의 개발자 또는 프로젝트에 맞는 개발자를 추천해드립니다.</string>
    <string name="click_meeting_start">회의 시작하기&#8599;</string>
    <string name="minute">%s분</string>
    <string name="tv_total_time">- 전체 회의 시간</string>
    <string name="tv_introduce_time">- 자기소개 시간</string>
    <string name="tv_icebreaking_time">- 아이스브레이킹 진행</string>
    <string name="tv_brainstorming_time">- 브레인스토밍 진행</string>
    <string name="tv_topic_time">- 주제 선정</string>
    <string name="tv_current_progress_time">- 진행 상황 공유</string>
    <string name="tv_trouble_shooting_time">- 트러블 슈팅</string>
    <string name="tv_feedback_time">- 프로젝트에 대한 피드백 진행</string>
    <string name="done">완료!</string>
    <string name="_00_00">00:00</string>
</resources>