<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/devinfo_dest"
        android:fontFamily="@font/pretendardbold"
        android:icon="@drawable/devinfo_navi_24"
        android:title="@string/developer" />
    <item
        android:id="@+id/projects_dest"
        android:fontFamily="@font/pretendardbold"
        android:icon="@drawable/projects_navi_24"
        android:title="@string/project" />
    <item
        android:id="@+id/ai_members_dest"
        android:fontFamily="@font/pretendardbold"
        android:icon="@drawable/ai_members_bottom_navi_24"
        android:title="@string/ai_members_dest" />
    <item
        android:id="@+id/mypage_dest"
        android:fontFamily="@font/pretendardbold"
        android:icon="@drawable/apply_navi_24"
        android:title="@string/apply" />
</menu>
