<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_matching_bot"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ai_matching_bot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ai_matching_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/pretendardbold"
        android:gravity="start"
        android:text="@string/ai_matching_title"
        android:textColor="@color/olive_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_matching_bot"
        app:layout_constraintStart_toEndOf="@+id/iv_matching_bot"
        app:layout_constraintTop_toTopOf="@+id/iv_matching_bot" />

    <TextView
        android:id="@+id/ai_matching_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/pretendardregular"
        android:gravity="start"
        android:text="@string/ai_matching_description"
        android:textColor="@color/gray2"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ai_matching_title" />


    <TextView
        android:id="@+id/tv_matching_dev_stack_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pretendardmedium"
        android:text="@string/tv_matching_dev_stack_title"
        android:textColor="@color/olive_black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ai_matching_description" />

    <TextView
        android:id="@+id/tv_dev_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/dialog_button_background_main_olive"
        android:fontFamily="@font/pretendardbold"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/dev_part"
        android:textColor="@color/olive_black"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_matching_dev_stack_title" />

    <TextView
        android:id="@+id/tv_dev_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/dialog_button_background_main_olive"
        android:fontFamily="@font/pretendardbold"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/dev_language"
        android:textColor="@color/olive_black"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/tv_dev_part"
        app:layout_constraintTop_toBottomOf="@+id/tv_matching_dev_stack_title" />

    <TextView
        android:id="@+id/tv_dev_tech_stack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/dialog_button_background_main_olive"
        android:fontFamily="@font/pretendardbold"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/dev_tech_stack"
        android:textColor="@color/olive_black"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/tv_dev_language"
        app:layout_constraintTop_toBottomOf="@+id/tv_matching_dev_stack_title" />

    <TextView
        android:id="@+id/tv_student_id_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pretendardmedium"
        android:text="@string/tv_student_id_title"
        android:textColor="@color/olive_black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dev_part" />


    <TextView
        android:id="@+id/tv_min_student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginStart="25dp"
        android:text="@string/min"
        android:fontFamily="@font/pretendardmedium"
        android:textColor="@color/olive_black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_student_id_title" />

    <NumberPicker
        android:id="@+id/np_min_student_id"
        android:layout_width="45dp"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@+id/tv_min_student_id"
        app:layout_constraintBottom_toBottomOf="@+id/tv_min_student_id"
        app:layout_constraintTop_toTopOf="@+id/tv_min_student_id" />

    <TextView
        android:id="@+id/tv_student_id1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/student_id"
        android:fontFamily="@font/pretendardmedium"
        android:textColor="@color/olive_black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/np_min_student_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_student_id_title" />

    <TextView
        android:id="@+id/tv_max_student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginStart="20dp"
        android:text="@string/max"
        android:fontFamily="@font/pretendardmedium"
        android:textColor="@color/olive_black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tv_student_id1"
        app:layout_constraintTop_toBottomOf="@+id/tv_student_id_title" />

    <NumberPicker
        android:id="@+id/np_max_student_id"
        android:layout_width="45dp"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@+id/tv_max_student_id"
        app:layout_constraintBottom_toBottomOf="@+id/tv_max_student_id"
        app:layout_constraintTop_toTopOf="@+id/tv_max_student_id" />

    <TextView
        android:id="@+id/tv_student_id2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/student_id"
        android:fontFamily="@font/pretendardmedium"
        android:textColor="@color/olive_black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/np_max_student_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_student_id_title" />

    <EditText
        android:id="@+id/et_matching_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/projects_background_olive"
        android:gravity="start"
        android:hint="@string/et_matching_description"
        android:padding="10dp"
        android:textColor="@color/olive_black"
        android:textColorHint="@color/gray2"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/np_min_student_id" />

    <CheckBox
        android:id="@+id/cb_project_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pretendardregular"
        android:text="@string/cb_project_experience"
        android:textColor="@color/olive_black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_matching_description" />

    <TextView
        android:id="@+id/btn_matching_result_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/submit_button_background"
        android:fontFamily="@font/pretendardbold"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text = "@string/btn_matching_result_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>