<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zucchini.ai_members.matching.AiMatchingBotActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendardextrabold"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:text="@string/ai_matching_bot"
            android:textColor="@color/dark_olive"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_matching_dev_stack_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pretendardmedium"
        android:text="@string/tv_matching_dev_stack_title"
        android:textColor="@color/olive_black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_top_app_bar" />

    <TextView
        android:id="@+id/tv_dev_stack_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/stack_background"
        android:fontFamily="@font/pretendardmedium"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/tv_dev_stack_language"
        android:textColor="@color/olive_black"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_matching_dev_stack_title" />

    <TextView
        android:id="@+id/tv_dev_stack_dev_stack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/stack_background"
        android:fontFamily="@font/pretendardmedium"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/tv_dev_stack_dev_stack"
        android:textColor="@color/olive_black"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/tv_dev_stack_language"
        app:layout_constraintTop_toBottomOf="@+id/tv_matching_dev_stack_title" />

    <TextView
        android:id="@+id/tv_dev_stack_cooperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/stack_background"
        android:fontFamily="@font/pretendardmedium"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/tv_dev_stack_cooperation"
        android:textColor="@color/olive_black"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/tv_dev_stack_dev_stack"
        app:layout_constraintTop_toBottomOf="@+id/tv_matching_dev_stack_title" />

    <TextView
        android:id="@+id/tv_student_id_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pretendardmedium"
        android:text="@string/tv_student_id_title"
        android:textColor="@color/olive_black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dev_stack_language" />


    <TextView
        android:id="@+id/tv_min_student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginStart="20dp"
        android:text="@string/min"
        android:fontFamily="@font/pretendardmedium"
        android:textColor="@color/olive_black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_student_id_title" />

    <NumberPicker
        android:id="@+id/np_min_student_id"
        android:layout_width="45dp"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@+id/tv_min_student_id"
        app:layout_constraintBottom_toBottomOf="@+id/tv_min_student_id"
        app:layout_constraintTop_toTopOf="@+id/tv_min_student_id" />

    <TextView
        android:id="@+id/tv_student_id1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/student_id"
        android:fontFamily="@font/pretendardmedium"
        android:textColor="@color/olive_black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/np_min_student_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_student_id_title" />

    <TextView
        android:id="@+id/tv_max_student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginStart="20dp"
        android:text="@string/max"
        android:fontFamily="@font/pretendardmedium"
        android:textColor="@color/olive_black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tv_student_id1"
        app:layout_constraintTop_toBottomOf="@+id/tv_student_id_title" />

    <NumberPicker
        android:id="@+id/np_max_student_id"
        android:layout_width="45dp"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@+id/tv_max_student_id"
        app:layout_constraintBottom_toBottomOf="@+id/tv_max_student_id"
        app:layout_constraintTop_toTopOf="@+id/tv_max_student_id" />

    <TextView
        android:id="@+id/tv_student_id2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/student_id"
        android:fontFamily="@font/pretendardmedium"
        android:textColor="@color/olive_black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/np_max_student_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_student_id_title" />

    <EditText
        android:id="@+id/et_matching_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/projects_background_olive"
        android:gravity="start"
        android:hint="@string/et_matching_description"
        android:padding="10dp"
        android:textColor="@color/olive_black"
        android:textColorHint="@color/gray2"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/np_min_student_id" />

    <CheckBox
        android:id="@+id/cb_project_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pretendardregular"
        android:text="@string/cb_project_experience"
        android:textColor="@color/olive_black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_matching_description" />

    <TextView
        android:id="@+id/btn_matching_result_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/submit_button_background"
        android:fontFamily="@font/pretendardbold"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text = "@string/btn_matching_result_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>